# futu-trading-platform

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.cursor/skills/futuapi/: SKILL.md
.cursor/skills/futuapi/docs/: API_REFERENCE.md
docs/: Futu-API-Doc-hk-Python.md  PAPER_TRADING.md
paper_trading/: __init__.py  config.yaml.example  engine.py  logging_setup.py  models.py  repository.py  settings.py  storage.py
paper_trading/data/: __init__.py  handler.py
paper_trading/execution/: __init__.py  handler.py
paper_trading/portfolio/: __init__.py  paper.py
paper_trading/strategy/: __init__.py  base.py
src/futu_platform/: __init__.py  cli.py  client.py  config.py  desktop.py  paper_trading_service.py  quote_service.py  risk.py  runner.py  trade_service.py  world_monitor.py
src/futu_platform/strategy/: __init__.py  engine.py  ma_cross.py  rsi.py
src/futu_platform/web/: app.py
src/futu_platform/web/static/: app.js  index.html  style.css
strategies/: default.yaml
tests/: test_world_monitor.py
