[project]
name = "futu-trading-platform"
version = "0.2.0"
description = "富途 OpenAPI 程式化自動交易平台"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "futu-api>=10.4.6408",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
desktop = ["pywebview>=5.0"]

[project.scripts]
futu-trade = "futu_platform.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
